<?xml version="1.0"?>
<package format="3">
  <name>rm_common</name>
  <version>1.0.0</version>
  <description>The rm common package provides all the common functions for RoboMaster AI Robot</description>
  <maintainer email="robomaster@dji.com">RoboMaster</maintainer>
  <license>GPL 3.0</license>
  <url type="website">https://github.com/RoboMaster/RoboRTS</url>
  <author>RoboMaster</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rm_interfaces</depend>
  <depend>actionlib</depend>
  <depend>nav_msgs</depend>
  <depend>Eigen3</depend>
  <depend>Boost</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>